# zappa-serverless-docker

./: .gitignore  Dockerfile  README.md  pyproject.toml  zappa_settings.json
zdf/: app.py  process.py
