[tool.poetry]
name = "lambda-docker-flask"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.7"
zappa = { git = "https://github.com/ian-whitestone/Zappa.git", branch = "add-docker-support" }
flask = "^1.1.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
